# digital-workspace-v2

./: .env.ci  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .pythonrc.py  .secrets.baseline  .tool-versions  404.html  Dockerfile  Dockerfile.test  Jenkinsfile  LICENSE  Makefile  Procfile  Procfile-celery  README.md  README.rst  buildpack.json  docker-compose.yml  hawk-api-access-test.py  index.html  locustfile.py  manage.py  manifest.yml  mkdocs.yml  package-lock.json  package.json  pii-ner-exclude.txt  pii-secret-exclude.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run-app.sh  run-celery.sh  run.sh  setup-local.sh  setup.cfg  (+4 more)
.circleci/: config.yml
.copilot/: config.yml  image_build_run.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: dependabot-requirements.yaml  docs.yml  lighthouse.yml
Transition/: models.py
Transition/migrations/: 0001_initial.py
about_us/: apps.py  models.py
about_us/migrations/: 0001_initial.py  0002_auto_20200828_0421.py
assets/js/: application.js  htmx.js  init.js  peoplefinder.js
assets/stylesheets/: application.scss  wagtail_admin.scss  wagtailtheme.css  workspace.scss
chunk_uploader/: chunk_uploader.py  file_handler.py
codebuild/: process.yml
codebuild/web/: buildspec.yml
config/: __init__.py  celery.py  gunicorn.py  settings.py  synonyms.txt  urls.py  wsgi.py
config/settings/: base.py  dev.py  env.py  local.py  prod.py  test.py
content/: admin.py  blocks.py  forms.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
content/migrations/: 0001_initial.py  0002_auto_20191218_1512.py  0002_auto_20200623_0934.py  0002_auto_20200727_0857.py  0002_auto_20200813_1142.py  0002_auto_20200918_0640.py  0002_auto_20201103_0334.py  0002_delete_newscategoryhome.py  0002_topictheme.py  0003_auto_20191219_2156.py  0003_auto_20200903_0756.py  0003_auto_20200921_0906.py  0003_auto_20201113_0844.py  0003_comment.py  0003_linklistitem.py  0003_newshome.py  0004_auto_20200617_1134.py  0004_auto_20200729_0447.py  0004_auto_20200921_1030.py  0004_contentpage_pinned_phrases.py  0004_delete_linklistitem.py  0004_newspage.py  0004_sitealertbanner.py  0005_auto_20200619_1011.py  0005_auto_20200624_0623.py  0005_auto_20200729_0959.py  0005_auto_20200908_0636.py  0005_auto_20201114_0341.py  0005_searchpinpagelookup_page.py  0006_auto_20200625_0339.py  0006_auto_20200729_1203.py  0006_auto_20200921_1052.py  0006_auto_20201114_0422.py  0007_auto_20200921_1059.py  0007_auto_20201116_0312.py  0007_newspage_hero_image.py  0007_topichomepage_topicpage.py  0008_auto_20200921_1101.py  0008_auto_20201123_0616.py  0008_create_topic_home_page.py  (+21 more)
content/templatetags/: formatting.py
content/test/: factories.py  site_alert_banner.py  test_create_groups.py  test_models.py
contributing/: index.html
contributing/pull-requests/: index.html
contributing/releasing/: index.html
contributing/testing/: index.html
copilot/: .workspace  process.yml
copilot/s3proxy/: manifest.yml
copilot/web/: buildspec.yml  manifest.yml
core/: admin.py  asset_storage.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
core/migrations/: 0001_initial.py  0002_historicaldocument.py  0003_auto_20230209_1441.py
core/services/: legacy_wordpress.py  peoplefinder.py
core/templates/: 1_col_content.html  2_col_content.html  404.html  500.html  base.html  page_problem_found.html
core/templatetags/: cookie_banner.py  git_info.py  site_alert.py  workspace_navigation.py
core/test/: site_alert_banner.py  test_views.py
countries/: models.py
countries/fixtures/: countries.json
countries/migrations/: 0001_initial.py  0002_alter_country_overseas_region.py  0003_auto_20220107_1434.py  0004_country_type.py
country_fact_sheet/: apps.py  models.py  tasks.py  test.html  utils.py
country_fact_sheet/migrations/: 0001_initial.py  0002_auto_20201127_0514.py  0003_auto_20201127_0707.py  0004_auto_20210219_0645.py  0005_auto_20210219_0746.py  0006_auto_20210223_0749.py
docs/: index.md  search.excalidraw  search.md  testing.md  upgrading.md  waf.md
docs/contributing/: index.md  releasing.md  testing.md
docs/development/: index.md  waf.md
docs/editing/: author.md  content-owner.md  index.md
docs/features/: page-behaviours.md  search.md
docs/permissions-and-groups/: feature-permissions.md  index.md
e2e_tests/: conftest.py  db_utils.py  test_homepage.py  test_my_application.py  test_peoplefinder.py  test_smoke.py  test_wagtail_admin.py  utils.py
e2e_tests/db_needs_reset/: conftest.py
e2e_tests/pages/: base.py  (+2 more)
features/: index.html
file_upload_handler/: apps.py  clam_av.py  s3.py  sign.py  signature.py  util.py
home/: models.py  util.py  wagtail_hooks.py
import_wordpress/: README.md  apps.py  image.py  parser.py  utils.py
mailchimp/: apps.py  services.py  tasks.py  utils.py
menu/: models.py
networks/: apps.py  models.py
news/: factories.py  forms.py  models.py  wagtail_hooks.py
peoplefinder/: admin.py  apps.py  backports.py  hawk.py  legacy_models.py  models.py  routers.py  signals.py  tasks.py  urls.py
permissions-and-groups/: index.html
pingdom/: services.py  urls.py  views.py
policies_and_guidance/: apps.py  models.py
requirements/: base.txt  dev.txt  prod.txt  production.txt  requirements.txt
requirements.in/: base.in  dev.in  prod.in  production.in
scripts/: coverage.sh  first_names.json  hawk-api-access-test.py  import-peoplefinder-db.sh  last_names.json  load-test-data.sh  truncate_anonymise.py  truncate_anonymise.py.cli
search/: forms.py  models.py  search.py  search_index.json  urls.py  utils.py  views.py
selenium_tests/: conftest.py  test_peoplefinder.py  test_smoke.py  utils.py
setup/: init.sql
src/: .pythonrc.py  conftest.py  manage.py
tests/: test_smoke.py  utils.py
tools/: models.py
transition/: apps.py  models.py
user/: admin.py  backends.py  models.py
waf/: index.html
working_at_dit/: apps.py  models.py
workspace/: peoplefinder.py  urls.py  wsgi.py
(+1786 files in other folders)
